// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketReplyActions/> should collapse the macro actions 1`] = `
<div>
  <div
    class="actions"
  >
    <i
      class="actionIcon material-icons mr-2"
    >
      bolt
    </i>
    <div
      class="badge mr-2"
    >
      1
    </div>
    <span
      class="title"
    >
      Actions performed on send
    </span>
    <i
      class="collapseIcon material-icons"
      id="show-actions"
    >
      keyboard_arrow_down
    </i>
  </div>
  <div
    class="collapse"
    style=""
  >
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Add internal note icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Add internal note
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="argsWrapper"
      >
        <div
          class="field"
        >
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-888"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="888"
                          data-offset-key="888-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="888-0-0"
                          >
                            <span
                              data-offset-key="888-0-0"
                            >
                              <span
                                data-text="true"
                              >
                                Map { "type": "string", "format": "html", "default": "" }
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketReplyActions/> should render the ticket reply macro actions collapsed 1`] = `
<div>
  <div
    class="actions"
  >
    <i
      class="actionIcon material-icons mr-2"
    >
      bolt
    </i>
    <div
      class="badge mr-2"
    >
      5
    </div>
    <span
      class="title"
    >
      Actions performed on send
    </span>
    <i
      class="collapseIcon material-icons"
      id="show-actions"
    >
      keyboard_arrow_down
    </i>
  </div>
  <div
    class="collapse"
  >
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Add internal note icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Add internal note
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="argsWrapper"
      >
        <div
          class="field"
        >
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-888"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="888"
                          data-offset-key="888-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="888-0-0"
                          >
                            <span
                              data-offset-key="888-0-0"
                            >
                              <span
                                data-text="true"
                              >
                                Map { "type": "string", "format": "html", "default": "" }
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Cancel last order icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Cancel last order
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="argsWrapper"
      >
        <div
          class="input"
        >
          <label
            class="label label"
            for="checkbox-1"
          >
            <input
              checked=""
              class="input"
              id="checkbox-1"
              name="checkbox-1"
              type="checkbox"
            />
            Restock
          </label>
        </div>
        <div
          class="input"
        >
          <label
            class="label label"
            for="checkbox-2"
          >
            <input
              checked=""
              class="input"
              id="checkbox-2"
              name="checkbox-2"
              type="checkbox"
            />
            Refund
          </label>
        </div>
      </div>
    </div>
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Duplicate last order icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Duplicate last order
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
    </div>
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Partially refund last order icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Partially refund last order
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="argsWrapper"
      >
        <span
          class="input wrapper group horizontal"
        >
          <input
            appendposition="left"
            class="input"
            max="Infinity"
            min="-Infinity"
            required=""
            step="0.01"
            type="number"
            value="Map { \\"label\\": \\"Amount\\", \\"default\\": \\"\\", \\"editable\\": true, \\"required\\": true, \\"display_order\\": 1, \\"input\\": Map { \\"type\\": \\"number\\", \\"step\\": 0.01 } }"
          />
          <span
            class="controls group vertical"
          >
            <button
              class="wrapper button wrapper small fill secondary small top"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_up
              </i>
            </button>
            <button
              class="wrapper button wrapper small fill secondary small bottom"
              type="button"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </span>
        </span>
      </div>
      <div
        class="caption note"
      >
        <i
          class="material-icons mr-1"
        >
          info
        </i>
        This action will fail if the payment hasn't been captured yet.
      </div>
    </div>
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Refund last order's shipping cost icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Refund last order's shipping cost
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="caption note"
      >
        <i
          class="material-icons mr-1"
        >
          info
        </i>
        This action will fail if the payment hasn't been captured yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketReplyActions/> should render the ticket reply macro actions uncollapsed 1`] = `
<div>
  <div
    class="actions"
  >
    <i
      class="actionIcon material-icons mr-2"
    >
      bolt
    </i>
    <div
      class="badge mr-2"
    >
      1
    </div>
    <span
      class="title"
    >
      Actions performed on send
    </span>
    <i
      class="collapseIcon material-icons"
      id="show-actions"
    >
      keyboard_arrow_up
    </i>
  </div>
  <div
    class="collapse show"
  >
    <div
      class="component"
    >
      <div
        class="title"
      >
        <img
          alt="Add internal note icon"
          class="actionLogo"
          role="presentation"
          src="test-file-stub"
        />
        <span>
          Add internal note
        </span>
      </div>
      <i
        class="closeIcon material-icons"
      >
        close
      </i>
      <div
        class="argsWrapper"
      >
        <div
          class="field"
        >
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-888"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="888"
                          data-offset-key="888-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="888-0-0"
                          >
                            <span
                              data-offset-key="888-0-0"
                            >
                              <span
                                data-text="true"
                              >
                                Map { "type": "string", "format": "html", "default": "" }
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
